backend_dev.log

> backend@1.0.0 dev
> nodemon src/index.ts

[33m[nodemon] 3.1.10[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: ts,json[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
[dotenv@17.2.3] injecting env (4) from .env -- tip: ⚙️  load multiple .env files with { path: ['.env.local', '.env'] }
/home/gim/project/gwiki/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/routes/pages.ts(29,9): error TS18046: 'error' is of type 'unknown'.
src/routes/pages.ts(51,9): error TS18046: 'error' is of type 'unknown'.
src/routes/pages.ts(77,9): error TS18046: 'error' is of type 'unknown'.
src/routes/pages.ts(94,9): error TS18046: 'error' is of type 'unknown'.

    at createTSError (/home/gim/project/gwiki/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/gim/project/gwiki/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/gim/project/gwiki/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/gim/project/gwiki/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/gim/project/gwiki/backend/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1820:10
    at Object.require.extensions.<computed> [as .ts] (/home/gim/project/gwiki/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 18046, 18046, 18046, 18046 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
